# simple_py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  release.sh  requirements.txt
src/simple_py/: __init__.py  math_utils.py
tests/: test_math_utils.py
