[project]
name = "simple_py"
description = "A simple math utility library"
authors = [{ name="Pablo Ochoa", email="pablodavi8a@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]  # ✅ IMPORTANTE para que setuptools sepa que la versión viene de setuptools-scm

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
